2014-03-11  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/arm/setjmp.S: Use sfi_breg on stores of mangled registers.
	* sysdeps/arm/__longjmp.S: Use sfi_breg on loads of mangled registers.
	Move sfi_sp use from the load-multiple (that no longer sets sp) to
	the new mov targetting sp.

2014-03-11  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	[BZ #16683]
	* sysdeps/powerpc/powerpc64/multiarch/memset-ppc64.S (__bzero_ppc):
	Define it for static builds as well.
	(NO_BZERO_IMPL): Likewise.

2014-03-11  Vidya Ranganathan  <vidya@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/power7/strspn.S: New file: Optimization.
	* sysdeps/powerpc/powerpc64/multiarch/strspn.c: New file:
	multiarch strspn for PPC64.
	* sysdeps/powerpc/powerpc64/multiarch/strspn-ppc64.c: New file
	* sysdeps/powerpc/powerpc64/multiarch/strspn-power7.S: New file
	* sysdeps/powerpc/powerpc64/multiarch/ifunc-impl-list.c:
	(__libc_ifunc_impl_list): Likewise.
	* sysdeps/powerpc/powerpc64/multiarch/Makefile: Add strspn
	multiarch optimizations
	* string/strspn.c (strspn): Using macro to redefine symbol name.

2014-03-10  Vidya Ranganathan  <vidya@linux.vnet.ibm.com>
	    Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/power7/strncat.S: New file: Optimization.
	* sysdeps/powerpc/powerpc64/multiarch/strncat.c: New file:
	multiarch strncat for PPC64.
	* sysdeps/powerpc/powerpc64/multiarch/strncat-ppc64.c: New file
	* sysdeps/powerpc/powerpc64/multiarch/strncat-power7.S: New file
	* sysdeps/powerpc/powerpc64/multiarch/ifunc-impl-list.c:
	(__libc_ifunc_impl_list): Likewise.
	* sysdeps/powerpc/powerpc64/multiarch/Makefile: Add strncat
	multiarch optimizations

2014-03-10  Siddhesh Poyarekar  <siddhesh@redhat.com>

	[BZ #16639]
	* nscd/nscd.service: Make service type forking.

2014-03-03  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/power5+/fpu/s_modf.c (__modf): Fix to return correct
	sign in non default rounding modes.