@@ -1,5 +1,11 @@
 2014-03-11  Roland McGrath  <roland@hack.frob.com>
 
+	* configure.ac (HAVE_EHDR_START): New check.
+	* configure: Regenerated.
+	* config.h.in (HAVE_EHDR_START): New #undef.
+	* elf/rtld.c (dl_main) [HAVE_EHDR_START]: Use __ehdr_start rather than
+	assuming the lowest-addressed segment maps the start of the file.
+
 	* sysdeps/arm/setjmp.S: Use sfi_breg on stores of mangled registers.
 	* sysdeps/arm/__longjmp.S: Use sfi_breg on loads of mangled registers.
 	Move sfi_sp use from the load-multiple (that no longer sets sp) to
